--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ngx-deploy-docker": "0.0.5",
     "ngx-toastr": "^12.1.0",
     "path": "^0.12.7",
+    "request-options": "^2.0.0",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.1",
     "zone.js": "^0.10.3"
